--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^7.1.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "vuetify": "^2.5.5"
+    "vuetify": "^2.5.5",
+    "vuetify-i18n-language-switcher-nuxt": "0.0.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
